add custom config

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -9,6 +9,8 @@ data:
   database:
     driver: mysql
     source: root:123456@tcp(127.0.0.1:3306)/test
+    max_idle_conns: 10
+    max_open_conns: 500
   redis:
     addr: 127.0.0.1:6379
     read_timeout: 0.2s
