upgrade to go 1.18

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -8,7 +8,7 @@ server:
 data:
   database:
     driver: mysql
-    source: root:123456@tcp(127.0.0.1:3306)/test
+    source: root:123456@tcp(127.0.0.1:3306)/sys
     max_idle_conns: 10
     max_open_conns: 500
   redis:
